# bevy_mesh_outline

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: test.yml
examples/: animated_mesh.rs  glowing.rs  intersecting.rs  simple.rs
src/: compose.rs  flood.rs  lib.rs  mask.rs  mask_node.rs  mask_pipeline.rs  mod.rs  node.rs  queue.rs  render.rs  texture.rs  uniforms.rs  view.rs
src/shaders/: compose_output.wgsl  flood.wgsl  mask.wgsl  mod.rs
