[package]
name = "bevy_mesh_outline"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16.0"
bevy_render = "0.16.0"
rand = "0.9.2"
tracing = "0.1.41"
wgpu-types = "24.0.0"
bytemuck = "1.19.0"
nonmax = "0.5.5"


[[example]]
name = "simple"
path = "examples/simple.rs"


[[example]]
name = "intersecting"
path = "examples/intersecting.rs"


[[example]]
name = "animated_mesh"
path = "examples/animated_mesh.rs"
